Fire keyboard events only when canvas focused

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="content">
         <div id="game">
-            <canvas data-play="game"></canvas>
+            <canvas tabindex="0" data-play="game"></canvas>
         </div>
     </div>
     <script src="./dist/game.umd.cjs"></script>
